src/objects/Route_Log__c.object
<CustomObject>
    <description>Stores case routing attempt records with their outcomes (errors and successes)</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Route Logs</relationshipLabel>
        <relationshipName>Route_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CurrentQueue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Queue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Queue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteStatus__c</fullName>
        <formula>IF( AND(ISBLANK( RoutingConfiguration__c ),ISBLANK( QueueName__c)) , &quot;Failures&quot;, &quot;Successes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routed_On__c</fullName>
        <formula>CreatedDate</formula>
        <label>Routed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RoutingConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Configuration #</label>
        <referenceTo>Routing_Configuration__c</referenceTo>
        <relationshipLabel>Route Logs</relationshipLabel>
        <relationshipName>Route_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RoutingPriority__c</fullName>
        <label>Priority Routing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceLevel__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic1__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <label>Route Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>RoutingConfiguration__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Route Logs</label>
    </listViews>
    <nameField>
        <displayFormat>RL-{0000000000}</displayFormat>
        <label>RL #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>